# DocCrew

./: .gitignore  README.md
Preprocessing/: Main.ipynb
Report/: main.fdb_latexmk  main.fls
doccrew/: pyproject.toml
doccrew/Reports/1-Extraction/: extraction
doccrew/Reports/2-Structuring/: structuring
doccrew/Reports/3-Writing/: writing
doccrew/Reports/4-Validation/: validation
doccrew/Reports/5-Correction/: corrected_report
doccrew/Reports/6-LatexReport/: report.fdb_latexmk  report.fls
doccrew/knowledge/: user_preference.txt
doccrew/src/doccrew/: MainAPI.py  MainGUI.py  crew.py  main.py
doccrew/src/doccrew/DocCrewInput/: DocCrewInput  DocCrewInput.txt
doccrew/src/doccrew/config/: agents.yaml  tasks.yaml  tasks_old.yaml
doccrew/src/doccrew/tools/: custom_tool.py
