[project]
name = "doccrew"
version = "0.1.0"
description = "DocCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
doccrew = "doccrew.main:run"
run_crew = "doccrew.main:run"
train = "doccrew.main:train"
replay = "doccrew.main:replay"
test = "doccrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
